--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,11 @@ dependencies {
     compile('org.apache.commons:commons-text:1.2')
     compile('com.google.guava:guava:25.0-jre')
 
+    compile(
+            [group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.19'],
+            [group: 'org.openjdk.jmh', name: 'jmh-generator-annprocess', version: '1.19']
+    )
+
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     runtimeOnly('org.postgresql:postgresql')
     compileOnly('org.projectlombok:lombok')
