--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     compile('org.apache.commons:commons-lang3:3.7')
     compile('org.apache.commons:commons-text:1.2')
+    compile('commons-io:commons-io:2.4')
     compile('com.google.guava:guava:25.0-jre')
 
     compile(
